# p2p-git-portal-wasi

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  jsdoc.json  package.json  webpack.config.js
.github/workflows/: semgrep.yml  test-build.yml
docs/: customise-jsdoc.js  extra-styles.css
public/: index.html
scripts/: wbg_to_wasi.js
src/: App.svelte  CommitsListingPanel.svelte  DirectoryListingPanel.svelte  IssuesListingPanel.svelte  main.js  wasi-gitportal.js  wasi-gitportal_bg.js  wasi-gitportal_bg_wasi.js
src/__tests__/: index.js
src/__tests__/setup/: buildserver.cjs  config.js  devserver.cjs  githttpserver.cjs  puppeteer.js
src/api/: api.js  fs.js  git-repository.js  git.js  index.js
src/test/: GoGitClonePanel.svelte
src/wasi-js/: wasiJs.js
src/wasi-rust/: .gitignore  Cargo.toml  README.md
src/wasi-rust/src/: main.rs
